--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,17 +1,30 @@
 ---
+- name: resolve platform specific vars
+  include_vars: "{{item}}"
+  with_first_found:
+    - files:
+      - "{{ansible_distribution}}-{{ansible_distribution_release}}.yml"
+      - "{{ansible_distribution}}.yml"
+      - "{{ansible_os_family}}.yml"
+      skip: true
+
 # tasks file for git
 - name: install...
-  become: yes
+  become: '{{git_privilege_escalation}}'
   become_user: root
   package: name={{item}} state=present
   with_items:
     - git
 
-- name: install system gitconfig
-  become: yes
+- name: configurate git
+  become: '{{git_privilege_escalation}}'
   become_user: root
-  template: >-
-    src=etc/gitconfig.j2
-    dest=/etc/gitconfig
-    mode=0644
-    
+  with_items: '{{git_config_protocol_map}}'
+  blockinfile:
+    create: yes
+    dest: '{{git_target_cfg}}'
+    mode: 0644
+    state: present
+    block: |
+      [url "{{item['url']}}"]
+        insteadOf = {{item['insteadOf']}}
